<resources>
    <string name="app_name">Mis hábitos</string>

    <string name="titulo_habitos">Mis hábitos</string>
    <string name="descripcion_habitos">Agregá hábitos simples para organizar tu día.</string>
    <string name="boton_agregar_habito">Agregar hábito</string>
    <string name="texto_habito_base">tomar agua</string>
    <string name="descripcion_imagen_habitos">Imagen de una lista de hábitos</string>

    <string name="titulo_agregar_habito">Agregar hábito</string>
    <string name="descripcion_agregar_habito">Escribí el nombre de un hábito para sumarlo a tu lista.</string>
    <string name="hint_habito">Ejemplo: leer 10 minutos</string>
    <string name="boton_guardar_habito">Guardar hábito</string>
    <string name="mensaje_habito_vacio">Escribí un hábito primero</string>
    <string name="boton_limpiar_habitos">Limpiar lista</string>
    <string name="texto_lista_vacia">No hay hábitos cargados.</string>
    <string name="texto_total_habitos">Total de hábitos: %1$d</string>
    <string name="formato_habito">Hábito %1$d: %2$s</string>
    <string-array name="habitos_iniciales">
        <item>tomar agua</item>
        <item>leer 10 minutos</item>
        <item>caminar</item>
        <item>dormir 8 horas</item>
    </string-array>
</resources>