<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo"
    android:padding="@dimen/pantalla_padding"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/contenedorPrincipal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_habitos"
            android:textColor="@color/color_texto_principal"
            android:textSize="@dimen/titulo_texto"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgHabitos"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/margen_chico"
            android:contentDescription="@string/descripcion_imagen_habitos"
            android:src="@drawable/habitos" />

        <TextView
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_chico"
            android:gravity="center"
            android:text="@string/descripcion_habitos"
            android:textColor="@color/color_texto_principal"
            android:textSize="@dimen/descripcion_texto" />

        <LinearLayout
            android:id="@+id/contenedorBotones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_medio"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAgregarHabito"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/boton_agregar_habito" />

            <Button
                android:id="@+id/btnLimpiarHabitos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margen_chico"
                android:layout_weight="1"
                android:text="@string/boton_limpiar_habitos" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollHabitos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margen_medio"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/listaHabitos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>